syntax = "proto3";

package blimp.sandbox.v0;

import "blimp/errors/v0/errors.proto";

option go_package = "github.com/kelda-inc/blimp/pkg/proto/sandbox";

service BootWaiter {
  rpc CheckReady(CheckReadyRequest) returns (stream CheckReadyResponse) {}
}

message CheckReadyRequest {
    WaitSpec wait_spec = 1;
}

message WaitSpec {
	repeated string depends_on = 1;
	repeated string bind_volumes = 2;
}

message CheckReadyResponse {
    blimp.errors.v0.Error error = 1;

    bool ready = 2;

    // An optional message providing more information on why the container
    // needs to wait.
    string reason = 3;
}
